feat: complete supervised learning interfaces
